@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-01-23T08:19:41Z",
-  "count_outdated" : 1150,
-  "uniques_outdated" : 728,
+  "timestamp" : "2024-01-23T16:20:22Z",
+  "count_outdated" : 1152,
+  "uniques_outdated" : 729,
   "count" : 1172,
   "uniques" : 742,
   "clones" : [
-    {
-      "timestamp": "2024-01-09T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-10T00:00:00Z",
       "count": 3,
