@@ -1,12 +1,7 @@
 {
-  "count": 21,
+  "count": 20,
   "uniques": 4,
   "clones": [
-    {
-      "timestamp": "2024-01-09T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-01-10T00:00:00Z",
       "count": 3,
