@@ -1,3 +1,12 @@
+2024-01-23T16:20:22Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7628699367 # 50
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
+* notice: last 14d: unq all: 4 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 728 1150 / 742 1172
+* notice: next accum: outdated-unq outdated-all / unq all: 729 1152 / 742 1172
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2024-01-09] / []
+
 2024-01-23T08:19:41Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7622867050 # 49
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--accum-inpage-downloads--gh-stats/commits?branch=master&time_zone=utc&until=2024-01-23
